# selenium_naver

./: .python-version  README.md  pyproject.toml
app/: db.sqlite3  send_sms.py
app/config/: settings.py
app/sample/: models.py
app/sample/management/commands/: download.py
app/sample/migrations/: 0001_initial.py
app/selenium/: selenium01.py
